<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/favorite_orders"
            android:title="@string/favorite_orders"
            android:icon="@drawable/ic_favorite_black_24dp"/>
        <item
            android:id="@+id/order_history"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history_black_24dp"/>
    </group>

    <item android:title="Divine Pizza">
        <menu>
            <item
                android:id="@+id/location"
                android:title="@string/location"
                android:icon="@drawable/ic_location_on_black_24dp"/>
            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_24dp"/>
            <item
                android:id="@+id/log_out"
                android:title="@string/log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"/>
            <item
                android:id="@+id/about"
                android:title="@string/about"
                android:icon="@drawable/ic_pizza_icon_black_24dp"/>
        </menu>
    </item>

</menu>
