<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/cart_item_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#1c1c1c" />

        <View
            android:id="@+id/cart_product_horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_toEndOf="@id/cart_item_image"
            android:layout_alignBottom="@id/cart_item_image"
            android:background="@color/colorLightGray" />

        <TextView
            android:id="@+id/cart_item_name"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:text="@string/cart_item_placeholder"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/cart_item_image"
            />

        <View
            android:id="@+id/cart_item_vertical_divider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@color/colorLightGray"
            android:layout_toEndOf="@id/cart_item_name"/>

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/price_placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:layout_toEndOf="@id/cart_item_vertical_divider"/>

        <View
            android:id="@+id/cart_item_vertical_divider2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"
            android:layout_toEndOf="@id/cart_product_price"/>

        <LinearLayout
            android:id="@+id/cart_product_controller"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/cart_item_vertical_divider2">

            <Button
                android:id="@+id/cart_product_add_button"
                android:layout_width="40dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="16sp"
                android:text="@string/plus_sign"/>

            <View
                android:id="@+id/cart_item_vertical_divider3"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/cart_product_minus_button"
                android:layout_width="40dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat_bold"
                android:stateListAnimator="@null"
                android:textSize="16sp"
                android:text="@string/minus_sign"/>

            <View
                android:id="@+id/cart_item_vertical_divider4"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorLightGray" />

            <Button
                android:id="@+id/cart_product_quantity_button"
                android:layout_width="40dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="16sp"
                android:text="@string/_1"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>